Fix collapsibe divs

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -146,6 +146,21 @@ a:hover{
     margin: 10px;
 }
 
+.responses {
+    border: 1px solid #23395D;
+    border-radius: 5px;
+    color: #23395D;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
 .content {
-    padding-left: 10px;
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    /* background-color: #f1f1f1; */
 }
